[workspace]
resolver = "2"
members = [
    "shared-types",
    "series-store",
    "kv-store",
    "ingest",
    "predict",
    "label",
    "train",
]

# Needed for profiling release builds
# [profile.release]
# debug = 1

# [profile.dev.package.burn]
# opt-level = 3

[profile.dev.package."*"]
opt-level = 3
