[workspace]
resolver = "2"
members = [
    "shared-types",
    "shared-burn",
    "series-store",
    "kv-store",
    "ingest",
    "predict",
    "label",
    "train",
]

# Needed for profiling release builds
[profile.release]
debug = 1

# [profile.dev.package.burn]
# opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/tracel-ai/burn.git"]
burn-core = { path = "../rust/burn/crates/burn-core" }
